# lorry-mirror-updater

./: README.md  mirrors.json.example  pyproject.toml
.github/workflows/: ci.yml
lorry_mirror_updater/: __init__.py  __main__.py
